--- a/src/modules/users/views/forgot_password.hbs
+++ b/src/modules/users/views/forgot_password.hbs
@@ -1,22 +1,20 @@
 <style>
-    .message-content{
-        font-family: Arial, Helvetica, sans-serif;
-        max-width: 600px;
-        font-size: 18px;
-        line-height: 24px;
-    }
+	.message-content{ font-family: Arial, Helvetica, sans-serif; max-width: 600px;
+	font-size: 18px; line-height: 24px; }
 </style>
 
 <div>
-    <p>Olá {{name}}!</p>
-    <br/>
-    <p>Recebemos uma solicitação de redifinição de senha para a sua conta de usuário.</p>
-    <p>Se realmente foi você que solicitou, clique no link abaixo para escolher uma nova senha.</p>
-    <p>
-        <a href="{{link}}"> Resetar minha senha</a>
-    </p>
-    <p>Caso você não tenha realizado essa solicitação, descarte este email</p>
-    <br/>
-    <p>Obrigado!</p>
-    <p>Equipa API Vendas</p>
+	<p>Olá {{name}}!</p>
+	<br />
+	<p>Recebemos uma solicitação de redifinição de senha para a sua conta de
+		usuário.</p>
+	<p>Se realmente foi você que solicitou, clique no link abaixo para escolher
+		uma nova senha.</p>
+	<p>
+		<a href='{{link}}'> Resetar minha senha</a>
+	</p>
+	<p>Caso você não tenha realizado essa solicitação, descarte este email</p>
+	<br />
+	<p>Obrigado!</p>
+	<p>Equipa Suporte KIBARATO</p>
 </div>
